fix: Cleanup code